<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="ip_port" type="id" />
    <item name="button_connect" type="id" />
    <item name="add_button" type="id" />
    <item name="menu" type="id" />
    <item name="play_button" type="id" />
    <item name="layout_one_button" type="id" />
    <item name="layout_left_right" type="id" />
    <item name="change_command" type="id" />
    <item name="arrows" type="id" />
    <item name="main_layout" type="id" />
</resources>