<resources>
    <string name="app_name">AndroidController</string>
    <string name="hint_text">Enter the IP:port from PC</string>
    <string name="connect_button">Connect</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="play_layout">playLayout</string>
    <string name="settings_mode">settings mode</string>
    <string name="play_mode">play mode</string>
    <string name="screen_count">saved_data</string>
    <string name="saved_data">saved_data</string>
    <string name="IP">IP</string>
    <string name="ok">OK</string>
</resources>
